--- a/app/src/main/res/layout/pick3_results_fragment.xml
+++ b/app/src/main/res/layout/pick3_results_fragment.xml
@@ -14,6 +14,7 @@
         android:id="@+id/recyclerViewPick3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
